tests/snapshots/wizard/wizard_roles_80x24.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                        step 4 of 7 "
"  ╭ Models ──────────────────────────────────────────────────────────────────╮  "
"  │                                                                          │  "
"  │  generator   qwen/qwen3-235b-a22b                                        │  "
"  │              the model writing subtopics and questions                   │  "
"  │                                                                          │  "
"  │  parent      deepseek/deepseek-r1                                        │  "
"  │                                                                          │  "
"  │  reasoning   ‹ on ›                                                      │  "
"  │                                                                          │  "
"  │  embedder                                                                │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  ╰──────────────────────────────────────────────────────────────────────────╯  "
" Enter next · Esc back · ↑↓ field · ←→ choose · Ctrl-C quit                     "
