tests/snapshots/wizard/wizard_runpod.snap
---
source: src/tui/wizard/write.rs
---
--- overbrainer.toml
# overbrainer project configuration.
# URLs, hosts and secrets never go here: set them through OVERBRAINER_* env vars (see .env.example).

[project]
name = "rust_expert"

[[topics]]
name = "ownership"
description = "Moves, borrows and lifetimes"
subtopics = 4
questions_per_subtopic = 12

[[topics]]
name = "traits"
subtopics = 3
questions_per_subtopic = 8

[providers.nanogpt]
protocol = "openai"

[roles]
generator = { provider = "nanogpt", model = "qwen/qwen3-235b-a22b" }
parent = { provider = "nanogpt", model = "deepseek/deepseek-r1", reasoning = true }
# Optional on every role: max_tokens (default 16384), temperature (0 to 2),
# reasoning_effort ("low", "medium" or "high", only with reasoning = true).
# thinking_budget = 8000  # anthropic only; Claude Opus 4.5, Sonnet 4.5 and Haiku 4.5 need this
# (fixed budget) instead of adaptive thinking; leave unset for newer Claude models.
# embedder = { provider = "openrouter", model = "openai/text-embedding-3-small" }

[pipeline]
concurrency = 8
max_retries = 5
dedup_threshold = 0.8
eval_ratio = 0.1
seed = 42
include_system_prompt = false
# embedding_threshold = 0.9     # used only when roles.embedder is set
# question_batch_size = 10
# request_timeout_secs = 600

[training]
target = "gpu_cloud"
base_model = "Qwen/Qwen3-8B"   # HF repo ID or a path on the target
adapter = "lora"              # lora | qlora | full
# epochs = 3
# learning_rate = 2e-4
# lora_r = 16
# lora_alpha = 32
# lora_dropout = 0.05
# sequence_len = 4096
# micro_batch_size = 2
# gradient_accumulation_steps = 4
# optimizer = "adamw_torch_fused"
# lr_scheduler = "cosine"
# sample_packing = true
# evals_per_epoch = 4
# saves_per_epoch = 1
# merge = false                # also write a merged model (lora and qlora only)
# hub_model_id = "user/model"  # push the adapter to a private Hub repo (needs OVERBRAINER_HF_TOKEN)
# [training.axolotl_extra]     # merged into the Axolotl YAML
# warmup_ratio = 0.1
# attn_implementation = "flash_attention_2"

[targets.gpu_cloud]
kind = "runpod"              # needs OVERBRAINER_RUNPOD__API_KEY; Secure Cloud only
gpu_types = "auto"           # "auto": the cheapest in stock at start; or a list, tried in order
max_hours = 6                # the pod watchdog deletes the pod after this, whatever it is doing
# max_cost_usd = 20           # stop with a snapshot at 95% of this spend in USD, delete at 100%
# min_vram_gb = 48             # gpu_types = "auto" only: least VRAM per GPU
# max_price_per_hour = 1.0     # gpu_types = "auto" only: highest list price of one GPU, USD
# gpu_count = 1
# image = "axolotlai/axolotl-cloud-term:0.19.0-py3.12-cu130-2.12.1@sha256:f7b94da82913920a003e28e091d8528f57f76da7360fca87e95faf62fa32a680"
# venv = "/workspace/axolotl-venv"
# container_disk_gb = 50
# boot_grace_minutes = 30      # the watchdog deletes a pod whose job never started
# retrieve_grace_minutes = 60  # the watchdog deletes a pod whose ended job was not retrieved
# data_center_ids = ["EU-RO-1"]  # any when unset; "auto": those with a chosen GPU in stock
# network_volume_id = "..."    # mounted at /workspace/data; needs exactly one data_center_ids entry, not "auto"
# max_volume_gb = 200          # grow the network volume up to this size in GB when the run fills it (permanent, billed monthly)

# [targets.homelab]
# kind = "ssh"                 # host comes from OVERBRAINER_TARGETS__HOMELAB__HOST
# runtime = "docker"
# workdir = "overbrainer"      # on the remote machine, relative to its home directory

# [export]                     # GGUF for llama.cpp and Ollama: `overbrainer export <run-id>`, or at the end of training
# after_training = false       # export in the training job, after the merge
# quantize = "Q4_K_M"          # Q4_K_M | Q4_K_S | Q5_K_M | Q5_K_S | Q6_K | Q8_0 | Q3_K_M | Q2_K | F16 | BF16
# ollama_name = "rust-mentor"  # `ollama create` this model once an export in a training job is retrieved

# [metrics]
# listen = "127.0.0.1:9464"    # serve Prometheus metrics at /metrics while a command holds the project; no authentication
--- .env
# Written by the overbrainer init wizard: never commit it.
# Values may be literals or Vault references: vault:<mount>/<path>#<field>
OVERBRAINER_PROVIDERS__NANOGPT__BASE_URL=https://nano-gpt.com/api/v1
OVERBRAINER_PROVIDERS__NANOGPT__API_KEY=sk-placeholder-provider-key
OVERBRAINER_RUNPOD__API_KEY=rp-placeholder-runpod-key
# OVERBRAINER_HF_TOKEN=          # gated or private base models, and training.hub_model_id
# OVERBRAINER_LOG=info
# VAULT_ADDR=https://vault.example.com
# VAULT_TOKEN=
--- .env.example
# Copy to .env (gitignored) or export in your shell.
# Values may be literals or Vault references: vault:<mount>/<path>#<field>
OVERBRAINER_PROVIDERS__NANOGPT__BASE_URL=https://nano-gpt.com/api/v1
OVERBRAINER_PROVIDERS__NANOGPT__API_KEY=
OVERBRAINER_RUNPOD__API_KEY=
# OVERBRAINER_HF_TOKEN=          # gated or private base models, and training.hub_model_id
# OVERBRAINER_LOG=info
# VAULT_ADDR=https://vault.example.com
# VAULT_TOKEN=
