tests/snapshots/wizard/wizard_start_80x24.snap
---
source: src/tui/wizard/view.rs
---
" ⠿ overbrainer   new project                                                    "
"  ╭ Project written ─────────────────────────────────────────────────────────╮  "
"  │                                                                          │  "
"  │  ✓ wrote overbrainer.toml, .env, .env.example, prompts/ and .gitignore.  │  "
"  │                                                                          │  "
"  │  Start auto now? It runs subtopics, questions, answers and split, then   │  "
"  │  trains, after one confirmation. No opens the Project view.              │  "
"  │                                                                          │  "
"  │   y yes    n no                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  ╰──────────────────────────────────────────────────────────────────────────╯  "
" y yes · n no · ←→ choose · Enter answer                                        "
